# wifi-monitor

./: .gitignore  INSTALL  Makefile  Makefile.am  configure.ac  wifi-monitor.openrc  wifi-monitor.service
include/: def.h
src/: Makefile.am  client.c  daemon.c  server.c
tests/: Makefile.am  all.cpp
tests/.deps/: all.Po  test-all.Po
